raffia/tests/recoverable/selectors/invalid-attr-1.css.snap
---
source: raffia/tests/recoverable.rs
---
error: attribute selector value is expected
  ┌─ invalid-attr-1.css:1:7
  │
1 │ [href=] {}
  │       ^


